static/css/s2.css
/* ... */
.readerTextTableOfContents .content .sectionName {
  display: none;
}
.readerTextTableOfContents .content .tocSection > .sectionName {
  font-size: 12px;
  margin: 0 3px 4px;
  color: #666;
  display: block;
}
.readerTextTableOfContents .content .tocContent {
  padding: 30px 0 40px;
  text-align: left;
}
.readerTextTableOfContents.narrowPanel .tocContent {
  padding: 0 0 40px;
}
.readerTextTableOfContents .content .tocSection {
  margin-bottom: 22px;
  display: block;
  text-align: left;
}
.readerTextTableOfContents .content .tocSection.noSubLevels{
  display: none;
}
.readerTextTableOfContents .content .schema-node-contents {
  margin: 0 auto 22px;
  display: block;
  width: 100%;
}
.readerTextTableOfContents .content .schema-node-title {
  color: black;
  font-size: 16px;
  display: inline-block;
  margin-bottom: 10px;
  cursor: pointer;
}
.readerTextTableOfContents .content .schema-node-title .he {
  font-family: "Heebo", sans-serif;
}
.readerTextTableOfContents .content .schema-node-toc {
  display: block;
}
.readerTextTableOfContents .content .schema-node-toc:not(.linked) > .schema-node-title:after {
  content: "\f105";
  display: inline-block;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: FontAwesome;
  margin-inline-start: 8px;
}
.readerTextTableOfContents .content .schema-node-toc:not(.linked) > .schema-node-title.open:after {
  content: "\f107";
}
.readerPanel.hebrew .readerTextTableOfContents .content .schema-node-toc:not(.linked) > .schema-node-title:after {
  content: "\f104";
  font-size: 122%;
}
.readerPanel.hebrew .readerTextTableOfContents .content .schema-node-toc:not(.linked) > .schema-node-title.open:after {
  content: "\f107";
}
.readerTextTableOfContents .content .schema-node-contents.closed {
  display: none;
}
.readerTextTableOfContents .content .schema-node-toc .schema-node-contents.closed {
  display: block;
}
.readerTextTableOfContents .content .tocLevel {
  display: block;
  margin: 0 auto;
}
.readerTextTableOfContents .content .tocContent > .tocLevel > .schema-node-toc {
  margin: 10px 0;
}
.readerTextTableOfContents .schema-node-toc {
  margin: 6px 20px;
}
.readerTextTableOfContents .content .schema-node-toc.linked:hover .schema-node-title {
  text-decoration: underline;
}
.readerTextTableOfContents .altStruct .refLink {
  width: 49%;
  margin: 3px;
  box-sizing: border-box;
  display: inline-block;
}
@media (max-width: 450px) {
  .readerTextTableOfContents .altStruct .refLink {
    margin: 0.5%;
  }
}
.hebrew .readerTextTableOfContents .content .tocSection,
.hebrew .readerTextTableOfContents .content .tocContent,
.english .readerTextTableOfContents.noLangToggleInHebrew .content .tocContent,
.bilingual .readerTextTableOfContents.noLangToggleInHebrew .content .tocContent{
  text-align: right;
}
.english .readerTextTableOfContents.noLangToggleInHebrew .content .tocContent,
.bilingual .readerTextTableOfContents.noLangToggleInHebrew .content .tocContent{
  direction: rtl;
}
.readerTextTableOfContents .versionsBox {
  padding: 20px 0;
}
.readerTextTableOfContents .button.allVersionsButton {
  color: #999;
  text-transform: uppercase;
  font-size: 15px;
  padding: 12px 50px;
  margin: 20px 0;
}
.readerTextTableOfContents .allVersionsButton.inactive {
  background-color: transparent;
}
.readerTextTableOfContents .versionBlocks {
  text-align: center;
  border-top: 1px solid #ccc;
  padding-top: 20px;
}
.readerTextTableOfContents .versionBlocks .versionLanguageBlock {
  padding-bottom: 30px;
  clear: both;
}
.readerTextTableOfContents .versionBlocks .versionLanguageHeader {
  font-family: "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
  text-transform: uppercase;
  letter-spacing: .2em;
  color: #999;
  padding: 10px 0;
}
.versionBlock{
  display: flex;
  flex-flow: column;
}
.readerTextTableOfContents .versionBlock {
  padding: 0 30px;
  margin: 25px 0;
  box-sizing: border-box;
  cursor: pointer;
  text-align: center;
}
.versionBlock .versionTitle {
  font-size: 18px;
  color: #000;
  /*unicode-bidi: plaintext;*/
}
.versionBlock .versionTitle a{
  font-family: 'HebrewInEnglish Text Font', "adobe-garamond-pro", "Crimson Text", Georgia, serif;
}
.versionBlock .versionTitle .versionEditIcon{
  display: none;
}
.versionBlock .versionTitle .versionEditIcon.enabled{
  display: inline-block;
}
.versionBlock .versionSelect{
  margin: 10px 0;
}
.readerTextTableOfContents .versionBlock .versionSelect, .aboutBox .versionBlock .versionSelect{
  display: none;
}
.versionBlock a {
  color: #999;
}
.versionBlock .versionNotes a {
  font-family: 'HebrewInEnglish Text Font', "adobe-garamond-pro", "Crimson Text", Georgia, serif;
  font-style: normal;
  font-weight: normal;
  font-size: 18px;
  line-height: 22px;
  color: #666666;
  text-decoration: underline;
}
.versionBlock .versionNotes span{
  font-family: 'HebrewInEnglish Text Font', "adobe-garamond-pro", "Crimson Text", Georgia, serif;
}
.versionBlock .versionDetails {
  display: inline-block;
  font-size: 12px;
  font-family: "Hebrew System Text", "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
  color: #999;
  display: flex;
  flex-flow: row;
  justify-content: space-between;
}
.readerTextTableOfContents .versionBlock .versionDetails{
  text-align: center;
}
.versionBlock .versionDetails .versionDetailsInformation{
  display: flex;
  flex-flow: column;
}
.readerTextTableOfContents .versionBlock .versionDetails .versionDetailsInformation{
  margin: auto;
  flex-flow: row;
  justify-content: space-around;
}
.versionBlock .versionDetails .versionDetailsImage{
  margin-top: 5px;
}
.versionBlock .versionDetails .versionDetailsInformation .versionDetailsElement{
  font-family: "Hebrew System Text", "Roboto", "Helvetica Neue", "Helvetica", sans-serif;;
  font-style: normal;
  font-weight: normal;
  font-size: 13px;
  line-height: 20px;
  color: #999999;
}
/* ... */

